@@ -1,3 +1,14 @@
+2005-08-22	Istvan Varga	<ivarga@csounds.com>
+	* Engine/musmon.c, H/csound.h, InOut/libsnd.c, Top/csound.c:
+	  new API function: csoundSetHostImplementedAudioIO()
+	  allows the host application to implement sound I/O with
+	  direct access to the spin/spout buffers (or, with a non-zero
+	  buffer size parameter and using csoundPerformBuffer(), the
+	  input/output buffers), ignoring any -i, -o, -b, and -B options
+	* H/csound.h, H/csoundCore.h, Top/threads.c:
+	  added return value to csoundWaitThreadLock(); non-zero if
+	  the function returns on timeout instead of the lock being notified
+
 2005-08-20	Istvan Varga	<ivarga@csounds.com>
 	* Engine/oload.c, H/csound.h, H/csoundCore.h, Top/threads.c:
 	  new API function: csoundWaitThreadLockNoTimeout()
